fixing responsive design on mobile itr1

--- a/input.css
+++ b/input.css
@@ -5,7 +5,7 @@ p{
 }
 
 .card{
-    background: linear-gradient(180deg, rgb(193, 206, 10), rgba(158, 5, 247, 0.925));
+    background: linear-gradient(180deg, rgb(193, 206, 10), rgba(221, 13, 134, 0));
     padding:50px;
     box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.5);
 }   
