--- a/output.css
+++ b/output.css
@@ -186,6 +186,12 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-\[60px\] {
     margin-top: 60px;
   }
@@ -194,6 +200,9 @@
   }
   .flex {
     display: flex;
+  }
+  .table {
+    display: table;
   }
   .h-\[55px\] {
     height: 55px;
@@ -207,20 +216,51 @@
   .w-\[125px\] {
     width: 125px;
   }
+  .w-\[150px\] {
+    width: 150px;
+  }
   .w-\[170px\] {
     width: 170px;
+  }
+  .w-\[175px\] {
+    width: 175px;
+  }
+  .w-\[180px\] {
+    width: 180px;
   }
   .w-\[355px\] {
     width: 355px;
   }
+  .w-auto {
+    width: auto;
+  }
+  .w-full {
+    width: 100%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .resize {
+    resize: both;
+  }
   .flex-col {
     flex-direction: column;
+  }
+  .content-center {
+    align-content: center;
   }
   .items-center {
     align-items: center;
   }
+  .justify-center {
+    justify-content: center;
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
   }
   .border-2 {
     border-style: var(--tw-border-style);
@@ -243,6 +283,9 @@
   }
   .text-center {
     text-align: center;
+  }
+  .align-middle {
+    vertical-align: middle;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -273,6 +316,13 @@
   .italic {
     font-style: italic;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .sm\:h-full {
     @media (width >= 40rem) {
       height: 100%;
@@ -298,6 +348,11 @@
       width: 425px;
     }
   }
+  .sm\:w-auto {
+    @media (width >= 40rem) {
+      width: auto;
+    }
+  }
   .sm\:w-full {
     @media (width >= 40rem) {
       width: 100%;
@@ -309,12 +364,17 @@
       line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
+  .md\:w-full {
+    @media (width >= 48rem) {
+      width: 100%;
+    }
+  }
 }
 p {
   margin: 5px 0px;
 }
 .card {
-  background: linear-gradient(180deg, rgb(193, 206, 10), rgba(158, 5, 247, 0.925));
+  background: linear-gradient(180deg, rgb(193, 206, 10), rgba(221, 13, 134, 0));
   padding: 50px;
   box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.5);
 }
@@ -327,11 +387,17 @@ p {
   syntax: "*";
   inherits: false;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
     }
   }
 }
